# Cargo.toml
[package]
name = "polars_doc_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43", features = ["parquet", "lazy", "dtype-struct", "json", "performant", "dynamic_group_by", "is_in", "dtype-categorical", "dtype-array"] }
hashbrown = { version = "=0.14.5", features = ["raw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"

# Optional: For potentially better memory allocation performance/profiling
# jemallocator = { version = "0.5", features = ["profiling"] }

# Optional: For memory stats reporting
# memory-stats = "1.1"

[profile.release]
lto = true          # Link-Time Optimization
codegen-units = 1   # Maximize optimization opportunities
panic = 'abort'     # Smaller binary, potentially faster
strip = true        # Strip symbols